fixed bug where pdf wasn't working on main site